syntax = "proto3";


import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";

option csharp_namespace = "IntelVault.Worker";

package Intel;

// The greeting service definition.
service Greeter {
  // Sends a greeting
  rpc SayHello (HelloRequest) returns (HelloReply);
  rpc MakeJob(OpenSourceRequestScan) returns (Status);
  rpc AllJobsRunning(google.protobuf.Empty) returns (ListJobsRunning);
  rpc IsWorkerRunning(google.protobuf.Empty) returns (IsRunning);
  rpc NewsDocumentAdded(google.protobuf.Empty) returns (stream OpenSourceRequestScan);
  rpc Start(jobTask) returns (StatusBool);
  rpc Stop(jobTask) returns (StatusBool);
  rpc Delete(jobTask) returns (StatusBool);
  rpc IsPaused(jobTask) returns (StatusBool);

}

// The request message containing the user's name.
message HelloRequest {
  string name = 1;
}

message OpenSourceRequestScan {
     string id =1;
     optional string url = 2;
     OpenSourceMediaType openSourceType =3;
     google.protobuf.Timestamp Start=4;
     google.protobuf.Timestamp End=5;
     keywordList list = 6;
     int32  Interval=7;     
     string name = 8;  
}

message StatusBool{
    bool status=1;
}

message IsRunning {
    bool running = 1;
}

message ListJobsRunning {
  repeated Job job = 1;
}

message Job{
    string name = 1;
    string description=2;
    google.protobuf.Timestamp startDate=3;
    google.protobuf.Timestamp endDate=4; 
    int32 timetriggerd=5;
    google.protobuf.Timestamp next=6;
    string group =7;
    string crontab=8;
}

message keywordList {
  repeated keyword keyword = 1;
}
message keyword{
    string name = 1;
 }
 message jobTask{
    string name = 1;
    string group =2;
 }

enum OpenSourceMediaType{
        Twitter=0;
        Scrapper=1;
        Doc=2;
        LinkNl=3;
        Api=4;
        PDF=5;
}



// The response message containing the greetings.
message HelloReply {
  string message = 1;
}

message Status {
  string message = 1;
}

message NewsItem{
    string Title =1;
    string Author =2;
    google.protobuf.Timestamp PublishedDate =3;
    optional string Content =4;
   optional  string Source =5;
    optional string Url =6;
    string shortContent =7;
}